Upgrade to platform-6.6.1

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@
  */
 
 buildscript {
-    ext.cubaVersion = '6.6-SNAPSHOT'
+    ext.cubaVersion = '6.6.1'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
