--- a/modules/core/src/com/haulmont/addon/dnd/app.properties
+++ b/modules/core/src/com/haulmont/addon/dnd/app.properties
@@ -39,8 +39,8 @@ cuba.anonymousSessionId = b50b42fa-c9b8-4f0b-4a42-26d5152f720a
 #                                  Other                                      #
 ###############################################################################
 
-cuba.webContextName = cubadnd-core
+cuba.webContextName = cuba-dnd-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
-cuba.restApiUrl = http://localhost:8080/cubadnd-portal/api
-cuba.webAppUrl = http://localhost:8080/cubadnd
+cuba.restApiUrl = http://localhost:8080/cuba-dnd-portal/api
+cuba.webAppUrl = http://localhost:8080/cuba-dnd
