--- a/modules/web/src/com/haulmont/addon/dnd/web-app.properties
+++ b/modules/web/src/com/haulmont/addon/dnd/web-app.properties
@@ -49,12 +49,12 @@ cuba.web.componentsConfig = +com/haulmont/addon/dnd/dragandrop-components.xml
 ###############################################################################
 
 # Middleware connection
-cuba.connectionUrlList = http://localhost:8080/cubadnd-core
+cuba.connectionUrlList = http://localhost:8080/cuba-dnd-core
 
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
 
-cuba.webContextName = cubadnd
+cuba.webContextName = cuba-dnd
 
 # Web session inactivity timeout in seconds
 cuba.httpSessionExpirationTimeoutSec = 1800
@@ -63,5 +63,5 @@ cuba.web.theme = halo
 cuba.web.foldersPaneEnabled=false
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
-cuba.restApiUrl = http://localhost:8080/cubadnd-portal/api
-cuba.webAppUrl = http://localhost:8080/cubadnd
+cuba.restApiUrl = http://localhost:8080/cuba-dnd-portal/api
+cuba.webAppUrl = http://localhost:8080/cuba-dnd
