--- a/modules/web/web/WEB-INF/web.xml
+++ b/modules/web/web/WEB-INF/web.xml
@@ -31,7 +31,7 @@
         <param-value>classpath:cuba-web-app.properties
             classpath:com/haulmont/addon/dnd/web-app.properties
             /WEB-INF/local.app.properties
-            "file:${catalina.base}/conf/cubadnd/local.app.properties"</param-value>
+            "file:${catalina.base}/conf/cuba-dnd/local.app.properties"</param-value>
     </context-param>
     <!--Application components-->
     <context-param>
