--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@
  */
 
 buildscript {
-    ext.addonVersion = '1.2-SNAPSHOT'
+    ext.addonVersion = '1.3-SNAPSHOT'
     ext.addonVersion = rootProject.hasProperty('buildVersion') ? rootProject['buildVersion'] : addonVersion
 
-    ext.cubaVersion = '6.8.1'
+    ext.cubaVersion = '6.9.0'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
@@ -41,7 +41,7 @@ def coreModule = project(':cuba-dnd-core')
 def guiModule = project(':cuba-dnd-gui')
 def webModule = project(':cuba-dnd-web')
 
-def servletApi = 'org.apache.tomcat:tomcat-servlet-api:8.0.26'
+def servletApi = 'javax.servlet:javax.servlet-api:3.1.0'
 
 
 apply(plugin: 'idea')
