--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@
  */
 
 buildscript {
-    ext.addonVersion = '1.3-SNAPSHOT'
+    ext.addonVersion = '1.4-SNAPSHOT'
     ext.addonVersion = rootProject.hasProperty('buildVersion') ? rootProject['buildVersion'] : addonVersion
 
-    ext.cubaVersion = '6.9.0'
+    ext.cubaVersion = '6.10.0'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
@@ -100,7 +100,9 @@ configure([globalModule, coreModule, guiModule, webModule]) {
 }
 
 configure(globalModule) {
-    task enhance(type: CubaEnhancing)
+    entitiesEnhancing {
+        main { enabled = true }
+    }
 
     jar {
         manifest {
