--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@
  */
 
 buildscript {
-    ext.addonVersion = '1.4-SNAPSHOT'
+    ext.addonVersion = '1.5-SNAPSHOT'
     ext.addonVersion = rootProject.hasProperty('buildVersion') ? rootProject['buildVersion'] : addonVersion
 
-    ext.cubaVersion = '6.10.0'
+    ext.cubaVersion = '7.0-SNAPSHOT'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
@@ -36,15 +36,16 @@ buildscript {
     }
 }
 
-def globalModule = project(':cuba-dnd-global')
-def coreModule = project(':cuba-dnd-core')
-def guiModule = project(':cuba-dnd-gui')
-def webModule = project(':cuba-dnd-web')
+def modulePrefix = 'cuba'
+
+def globalModule = project(":${modulePrefix}-dnd-global" )
+def coreModule = project(":${modulePrefix}-dnd-core" )
+def guiModule = project(":${modulePrefix}-dnd-gui" )
+def webModule = project(":${modulePrefix}-dnd-web" )
 
 def servletApi = 'javax.servlet:javax.servlet-api:3.1.0'
 
 
-apply(plugin: 'idea')
 apply(plugin: 'cuba')
 
 cuba {
@@ -82,7 +83,6 @@ def hsql = 'org.hsqldb:hsqldb:2.2.9'
 configure([globalModule, coreModule, guiModule, webModule]) {
     apply(plugin: 'java')
     apply(plugin: 'maven')
-    apply(plugin: 'idea')
     apply(plugin: 'cuba')
 
     dependencies {
@@ -121,7 +121,7 @@ configure(coreModule) {
 
     dependencies {
         compile(globalModule)
-        provided(servletApi)
+        compileOnly(servletApi)
         jdbc(hsql)
         testRuntime(hsql)
 
@@ -129,7 +129,7 @@ configure(coreModule) {
 
     task cleanConf(description: 'Cleans up conf directory') {
         doLast {
-            def dir = new File(cuba.tomcat.dir, '/conf/cuba-dnd-core')
+            def dir = new File(cuba.tomcat.dir, "/conf/${modulePrefix}-dnd-core" )
             if (dir.isDirectory()) {
                 ant.delete(includeemptydirs: true) {
                     fileset(dir: dir, includes: '**/*', excludes: 'local.app.properties')
@@ -169,7 +169,7 @@ configure(guiModule) {
     task deployConf(type: Copy) {
         from file('src')
         include "com/haulmont/addon/dnd/**"
-        into "$cuba.tomcat.dir/conf/cuba-dnd"
+        into "$cuba.tomcat.dir/conf/${modulePrefix}-dnd"
     }
 }
 
@@ -179,7 +179,7 @@ configure(webModule) {
     }
 
     dependencies {
-        provided(servletApi)
+        compileOnly(servletApi)
         compile(guiModule)
 
     }
@@ -197,7 +197,7 @@ configure(webModule) {
     task deployConf(type: Copy) {
         from file('src')
         include "com/haulmont/addon/dnd/**"
-        into "$cuba.tomcat.dir/conf/cuba-dnd"
+        into "$cuba.tomcat.dir/conf/${modulePrefix}-dnd"
     }
 
     task clearMessagesCache(type: CubaClearMessagesCache) {
@@ -207,7 +207,7 @@ configure(webModule) {
 
     task cleanConf(description: 'Cleans up conf directory') {
         doLast {
-            def dir = new File(cuba.tomcat.dir, '/conf/cuba-dnd')
+            def dir = new File(cuba.tomcat.dir, "/conf/${modulePrefix}-dnd" )
             if (dir.isDirectory()) {
                 ant.delete(includeemptydirs: true) {
                     fileset(dir: dir, includes: '**/*', excludes: 'local.app.properties')
@@ -226,13 +226,13 @@ configure(webModule) {
 
 
 
-task undeploy(type: Delete, dependsOn: ':cuba-dnd-web:cleanConf') {
+task undeploy(type: Delete, dependsOn: ":${modulePrefix}-dnd-web:cleanConf" ) {
     delete("$cuba.tomcat.dir/shared")
-    delete("$cuba.tomcat.dir/webapps/cuba-dnd-core")
-    delete("$cuba.tomcat.dir/webapps/cuba-dnd")
+    delete("$cuba.tomcat.dir/webapps/${modulePrefix}-dnd-core" )
+    delete("$cuba.tomcat.dir/webapps/${modulePrefix}-dnd" )
 }
 
-task restart(dependsOn: ['stop', ':cuba-dnd-core:deploy', ':cuba-dnd-web:deploy'], description: 'Redeploys applications and restarts local Tomcat') {
+task restart(dependsOn: ['stop', ":${modulePrefix}-dnd-core:deploy" , ":${modulePrefix}-dnd-web:deploy" ], description: 'Redeploys applications and restarts local Tomcat') {
     doLast {
         ant.waitfor(maxwait: 6, maxwaitunit: 'second', checkevery: 2, checkeveryunit: 'second') {
             not {
@@ -243,8 +243,5 @@ task restart(dependsOn: ['stop', ':cuba-dnd-core:deploy', ':cuba-dnd-web:deploy'
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.3.1'
-}
 
 apply from: 'extra.gradle'
