--- a/settings.gradle
+++ b/settings.gradle
@@ -16,8 +16,9 @@
  */
 
 rootProject.name = 'dragandrop'
-include(':cuba-dnd-global', ':cuba-dnd-core', ':cuba-dnd-gui', ':cuba-dnd-web')
-project(':cuba-dnd-global').projectDir = new File(settingsDir, 'modules/global')
-project(':cuba-dnd-core').projectDir = new File(settingsDir, 'modules/core')
-project(':cuba-dnd-gui').projectDir = new File(settingsDir, 'modules/gui')
-project(':cuba-dnd-web').projectDir = new File(settingsDir, 'modules/web')
+def modulePrefix = 'cuba'
+include(":${modulePrefix}-dnd-global" , ":${modulePrefix}-dnd-core" , ":${modulePrefix}-dnd-gui" , ":${modulePrefix}-dnd-web" )
+project(":${modulePrefix}-dnd-global" ).projectDir = new File(settingsDir, 'modules/global')
+project(":${modulePrefix}-dnd-core" ).projectDir = new File(settingsDir, 'modules/core')
+project(":${modulePrefix}-dnd-gui" ).projectDir = new File(settingsDir, 'modules/gui')
+project(":${modulePrefix}-dnd-web" ).projectDir = new File(settingsDir, 'modules/web')
