--- a/modules/core/web/WEB-INF/web.xml
+++ b/modules/core/web/WEB-INF/web.xml
@@ -23,8 +23,7 @@
     <!-- Application properties config files -->
     <context-param>
         <param-name>appPropertiesConfig</param-name>
-        <param-value>classpath:cuba-app.properties
-            classpath:com/haulmont/addon/dnd/app.properties
+        <param-value>classpath:com/haulmont/addon/dnd/app.properties
             /WEB-INF/local.app.properties
             "file:${catalina.base}/conf/cuba-dnd-core/local.app.properties"</param-value>
     </context-param>
