Update to framework v7

--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@
  */
 
 buildscript {
-    ext.addonVersion = '1.4-SNAPSHOT'
+    ext.addonVersion = '1.5-SNAPSHOT'
     ext.addonVersion = rootProject.hasProperty('buildVersion') ? rootProject['buildVersion'] : addonVersion
 
-    ext.cubaVersion = '7.0-SNAPSHOT'
+    ext.cubaVersion = '7.0.0'
     repositories {
         maven {
             url 'https://repo.cuba-platform.com/content/groups/work'
