--- a/build.gradle
+++ b/build.gradle
@@ -21,13 +21,8 @@ buildscript {
 
     ext.cubaVersion = '7.0.0'
     repositories {
-        maven {
-            url 'https://repo.cuba-platform.com/content/groups/work'
-            credentials {
-                username(rootProject.hasProperty('repoUser') ? rootProject['repoUser'] : 'cuba')
-                password(rootProject.hasProperty('repoPass') ? rootProject['repoPass'] : 'cuba123')
-            }
-        }
+        jcenter()
+        maven { url "https://dl.bintray.com/cuba-platform/main" }
 
 
     }
