--- a/modules/web/src/com/haulmont/addon/dnd/web-app.properties
+++ b/modules/web/src/com/haulmont/addon/dnd/web-app.properties
@@ -63,5 +63,7 @@ cuba.web.theme = halo
 cuba.web.foldersPaneEnabled=false
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
-cuba.restApiUrl = http://localhost:8080/cuba-dnd-portal/api
 cuba.webAppUrl = http://localhost:8080/cuba-dnd
+cuba.web.loginScreenId=loginWindow
+cuba.web.mainScreenId=mainWindow
+cuba.gui.genericFilterApplyImmediately=false
